manifests/kubeflow_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: wildcard-certificate-tls
  name: kubeflow-ingress
  namespace: istio-system
spec:
  tls:
  - hosts:
      - kubeflow.ydata.ml
    secretName: wildcard-certificate-tls
  rules:
  - host: kubeflow.ydata.ml
    http:
      paths:
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
        path: /
        pathType: Prefix
